--- a/style.css
+++ b/style.css
@@ -3,28 +3,79 @@
   padding: 0;
 }
 body {
-  background-color: #eee;
-}
-nav{
-  width: 100%;
-  height: 80px;
   background-color: #fff;
 }
-nav ul {
-  padding-left: 350px;
+
+.top-header{
+    text-align: center;
+    height: 150px;
 }
-nav ul li {
-   display: inline;
-   float: left;
+#logo{
+  float:left;
+  padding: none;
+  margin: none;
+/*  height: 60px;*/
+  width: 20%;
 }
-nav ul li a {
-   text-decoration: none;
-   color: black;
-   line-height: 80px;
-   font-family: Rockwell;
-   display: block;
-   padding: 0 40px;
+#logo img{
+    width: 100%;
+    height: 150px;
+    float: left;
+    padding: 0px 0px;
 }
-nav ul li a:hover {
-   color: blue;
+nav{
+  width: 80%;
+  float: right;
+  height: 150px;
+  background-color:#f2faf7;
 }
+nav ul{
+  padding-left: 500px;
+}
+nav ul li{
+  display: inline;
+  float: left;
+
+}
+nav ul li a{
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  line-height: 160px;
+  font-family: Rockwell;
+  display: block;
+  padding: 0px 40px;
+}
+nav ul li a:hover{
+  color: blue;
+  font-size: 30px;
+  background-color: #e2f0f3;
+}
+.header #img-menu{
+  padding-top: 150px;
+  height: 500px;
+  background: #bcd4e6;
+}
+.header #img-menu .img-size{
+  height: 500px;
+  float: right;
+  width: 30%;
+}
+.header #img-menu #content{
+height: 400px;
+  width: 60%;
+  padding: 100px 5% 100px 5%;
+  font-size: 25px;
+  font-weight: 500;
+  font-family: cursive;
+  color: #00008b;
+}
+.header #img-meny #content .caption{
+  font-size: 20px;
+  height = 200px;
+  padding-left: 50px;
+  margin-top: 300px;
+  align-content: center;
+  
+}
+  
